fix: centre align the last logo

--- a/css/style.sass
+++ b/css/style.sass
@@ -623,7 +623,7 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
   .testimonial-section img
     margin-top: 10px
   .get-started-button
-    margin-top: 50px 
+    margin-top: 50px
 
 
 @media only screen and (max-width: 1024px)
@@ -704,7 +704,7 @@ $feat-colors: #1f2367, #171c4f, #06233c, #132d45
   .client-section
     margin-left: 5%
   .client-logo-container:last-child
-    margin-left: 200px
+    margin-left: 30%
   .feedback-box
     height: 350px
   .testimonial-feedback
